--- a/olm.css
+++ b/olm.css
@@ -1,5 +1,5 @@
 pre {
-  border: 1px solid #cacaca;
+  border: 1px solid #cacaca; 
   line-height: 1.2em;
   font: 12px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
   padding: 10px;
@@ -10,8 +10,8 @@ pre {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  background-color: #FAFAFB;
-  color: #393939;
+  background : #f5f5f5; 
+  color: black; 
   margin: 0px;
 }
 
@@ -22,6 +22,7 @@ h1 {
 }
 
 h2 {
+  color : #ff7300;
   border-bottom-style: dashed;
   border-bottom-color: black; 
   border-bottom-width: 1px; 
